# Truck-Pallet-Packing

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
datasets/: Pallets_01.csv  Pallets_02.csv  Pallets_03.csv  Pallets_04.csv  Pallets_05.csv  Pallets_06.csv  Pallets_08.csv  Pallets_09.csv  Pallets_10.csv  TruckAndPallets_01.csv  TruckAndPallets_02.csv  TruckAndPallets_03.csv  TruckAndPallets_04.csv  TruckAndPallets_05.csv  TruckAndPallets_06.csv  TruckAndPallets_07.csv  TruckAndPallets_08.csv  TruckAndPallets_09.csv  TruckAndPallets_10.csv
datasets/solutions/: OptimalSolution_05.csv  OptimalSolution_06.csv  OptimalSolution_07.csv  OptimalSolution_08.csv  OptimalSolution_09.csv
docs/doxygen/html/: algorithms_8hpp.html  algorithms_8hpp__dep__incl.map  algorithms_8hpp__dep__incl.md5  algorithms_8hpp__incl.map  algorithms_8hpp__incl.md5  algorithms_8hpp_source.html  annotated.html  brute__force_8cpp.html  brute__force_8cpp__incl.map  brute__force_8cpp__incl.md5  brute__force__backtracking_8cpp.html  brute__force__backtracking_8cpp__incl.map  brute__force__backtracking_8cpp__incl.md5  classIndividual-members.html  classIndividual.html  classPallet-members.html  classPallet.html  classPalletList-members.html  classPalletList.html  classPopulation-members.html  classPopulation.html  classTruck-members.html  classTruck.html  classes.html  dataset__parser_8cpp.html  dataset__parser_8cpp__incl.map  dataset__parser_8cpp__incl.md5  dir_000000_000001.html  dir_000000_000002.html  dir_000000_000004.html  dir_000001_000002.html  dir_000002_000001.html  dir_000003_000000.html  dir_000003_000002.html  dir_000003_000004.html  dir_25205df789895db728d786a757b2675c.html  dir_25205df789895db728d786a757b2675c_dep.map  dir_25205df789895db728d786a757b2675c_dep.md5  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_5dd65160827af56e6353642206b80129.html  (+88 more)
src/: greedy.cpp  main.cpp
src/algorithms/: algorithms.hpp  brute_force.cpp  brute_force.h  brute_force_backtracking.cpp  brute_force_backtracking.h  dynamicProgramming.cpp  dynamicProgramming.h  genetic.cpp  geneticOperations.hpp  greedy.cpp  greedy.h  item.hpp  population.hpp
src/model/: geneticOperations.hpp  item.hpp  pallet.hpp  pallet_list.hpp  population.hpp  truck.hpp
src/parsers/: dataset_parser.cpp  parsers.hpp
src/utils/: utils.cpp  utils.hpp
(+54 files in other folders)
